[package]
name = "tunnelbana"
version = "0.1.0"
edition = "2021"

[dependencies]
# tokio
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs"] }
bytes = "1"

# internal
tunnelbana-headers = { workspace = true }
tunnelbana-redirects = { workspace = true }

# http
tower = { version = "0.5",  features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "validate-request", "set-status"] }
hyper-util = { version = "0.1", features = ["server", "server-graceful", "server-auto", "http1", "http2",  "service"] }
http = "1"
http-body-util = "0.1"


# logging
tracing = "0.1"
tracing-subscriber = "0.3"

# utilities
vss = "0.1"
thiserror = "2"

[workspace]
members = ["crates/tunnelbana-headers", "crates/tunnelbana-redirects"]

[workspace.dependencies]
tunnelbana-headers = { path = "crates/tunnelbana-headers" }
tunnelbana-redirects = { path = "crates/tunnelbana-redirects" }

