[package]
name = "tunnelbana"
version = "0.1.0"
edition = "2021"

[dependencies]
# tokio
tokio = { version = "1", features = ["rt-multi-thread", "net", "fs"] }

# internal
tunnelbana-etags.workspace = true
tunnelbana-headers.workspace = true
tunnelbana-redirects.workspace = true
tunnelbana-hidepaths.workspace = true

# http
tower = { version = "0.5",  features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "set-status"] }
hyper-util = { version = "0.1", features = ["server", "server-graceful", "server-auto", "http1", "http2",  "service"] }
http = "1"

# logging
tracing = "0.1"
tracing-subscriber = "0.3"

# utilities
vss = "0.1"

[workspace]
members = ["crates/tunnelbana-etags", "crates/tunnelbana-headers", "crates/tunnelbana-hidepaths", "crates/tunnelbana-redirects"]

[workspace.dependencies]
tunnelbana-etags = { path = "crates/tunnelbana-etags" }
tunnelbana-headers = { path = "crates/tunnelbana-headers" }
tunnelbana-redirects = { path = "crates/tunnelbana-redirects" }
tunnelbana-hidepaths = { path = "crates/tunnelbana-hidepaths" }

