[package]
name = "tunnelbana"
version = "0.1.2"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "Serve static websites with ease and speed."
keywords = ["redirects", "http", "tower"]
categories = ["web-programming", "web-programming::http-server"]
repository = "https://github.com/randomairborne/tunnelbana"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
# tokio
tokio = { version = "1", features = ["rt", "net", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }

# internal
tunnelbana-etags = { version = "0.1", path = "crates/tunnelbana-etags" }
tunnelbana-headers = { version = "0.1", path = "crates/tunnelbana-headers" }
tunnelbana-redirects = { version = "0.1", path = "crates/tunnelbana-redirects" }
tunnelbana-hidepaths = { version = "0.1", path = "crates/tunnelbana-hidepaths" }

# http
tower = { version = "0.5",  features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "set-status", "set-header"] }
hyper-util = { version = "0.1", features = ["server", "server-graceful", "server-auto", "http1", "http2",  "service"] }
http = "1"

# logging
tracing = "0.1"
tracing-subscriber = "0.3"

# utilities
vss = "0.1"
argh = "0.1"
futures-util = { version = "0.3", default-features = false }

[workspace]
members = ["crates/tunnelbana-etags", "crates/tunnelbana-headers", "crates/tunnelbana-hidepaths", "crates/tunnelbana-redirects"]

[workspace.dependencies]
tunnelbana-etags = { path = "crates/tunnelbana-etags" }
tunnelbana-headers = { path = "crates/tunnelbana-headers" }
tunnelbana-redirects = { path = "crates/tunnelbana-redirects" }
tunnelbana-hidepaths = { path = "crates/tunnelbana-hidepaths" }

[profile.release]
lto = "fat"
codegen-units = 1
