[package]
name = "tunnelbana-headers"
version = "0.1.1"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "Parse cloudflare-style _headers files and add them to your HTTP servers"
keywords = ["headers", "http", "tower"]
categories = ["web-programming"]
repository = "https://github.com/randomairborne/tunnelbana"
readme = "README.txt"
license = "MIT OR Apache-2.0"

[dependencies]
# http
tower = "0.5"
http = "1"
http-body = "1"
bytes = "1"

# utils
pin-project = "1"
tracing = "0.1"
thiserror = "2"

# router
matchit = "0.8"

[dev-dependencies]
tower-http = { version = "0.6", features = ["fs"] }