[package]
name = "tunnelbana-hidepaths"
version = "0.2.0"
edition = "2021"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "Hide specific paths in tower services by sending them to a 404 service."
keywords = ["security", "blocking", "http", "tower"]
categories = ["web-programming"]
repository = "https://github.com/randomairborne/tunnelbana"
readme = "README.txt"
license = "MIT OR Apache-2.0"

[dependencies]
# http
tower = "0.5"
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"

# utils
pin-project = "1"
tracing = "0.1"

# router
matchit = "0.8"

[dev-dependencies]
tower-http = { version = "0.6", features = ["fs"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }