[package]
name = "tunnelbana-redirects"
version = "0.2.0"
edition = "2024"
authors = ["valkyrie_pilot <valk@randomairborne.dev>"]
description = "Generate redirect lists from cloudflare-style _redirects text files and serve them with tower."
keywords = ["redirects", "http", "tower"]
categories = ["web-programming"]
repository = "https://github.com/randomairborne/tunnelbana"
readme = "README.txt"
license = "MIT OR Apache-2.0"

[dependencies]
# http
tower = "0.5"
http = "1"
http-body = "1"
http-body-util = "0.1"
bytes = "1"

# utils
pin-project = "1"
tracing = "0.1"
thiserror = "2"

# router
matchit = "0.9"
simpleinterpolation = "0.2"

[dev-dependencies]
tower-http = { version = "0.6", features = ["fs"] }